[package]
name = "porse"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
redis = { version = "0.23.0", features = ["tokio-native-tls-comp", "tokio-comp"] }
redis-async = "0.16.0"
tokio = { version = "1.28.1", features = ["full"] }
porus = "0.1.20"
#porus = { path = "../porus" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
tokio-native-tls = "0.3.1"
http = "0.2"
log4rs = "1.2.0"
log = "0.4.18"

[dev-dependencies]
async-trait = "0.1.68"
